# whisper_streaming

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  INSTRUCTIONS.md  README.md  README_ORG.md  RELEASE_NOTES_v1.5.1.md  TEST.md  TODO.md  docker-compose.yaml  docker_build.ps1  docker_run.ps1  entrypoint.sh  line_packet.py  local_build.ps1  local_build.sh  local_run.ps1  local_run.sh  pyproject.toml  requirements.txt  silero_vad_iterator.py  start.bat  whisper_online.py  whisper_online_server.py
.github/: copilot-instructions.md
docs/orig/: README.md  dockerhub.md
